css/style.css
body {
	font-family: 'Helvetica Neue Light', 'Open Sans', Helvetica, Arial, sans-serif;
	margin: 0px;
	padding: 0px;
}
a {
	color: #fff;
	font-weight: 400;
	text-decoration: none;
	opacity: 0.8;
	font-style: italic;
}
article a:before{
	content: '"';
}
article a:after{
	content: '"';
}
article a:hover {
	text-decoration: underline;
	opacity: 1;
}
article {
	position: relative;
	box-sizing: border-box;
	font-weight: 300;
	color: #fff;
	width: 100%;
	text-align: left;
	padding: 0px 40px;
	font-size: 70px;
}
article p {
	margin: 0px;
	padding: 0px;
}
article blockquote  {
	margin-left: 0px;
	padding-left: 0px;
	line-height: 1;
	font-weight: 400;
	font-style: italic;
	font-size: 18px;
	color: #fff;
	text-align: left;
}
article blockquote:before {
	content: '-';
}
section {
	box-sizing: border-box;
	position: absolute;
	top: 0;
	left: 0;
	overflow: hidden;
	margin: 0px;
	padding: 0px;
	background: transparent no-repeat center center;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;

}
@media screen and (max-width: 790px){
	article {
		font-size: 50px;
	}
}
@media screen and (max-width: 400px){
	article {
		font-size: 30px;
	}
}

